--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "figure-scraper",
+  "name": "page-scraper",
   "version": "1.0.0",
-  "description": "Dedicated scraping service for figure collection data",
+  "description": "Generic web page scraping service with browser automation",
   "main": "dist/index.js",
   "scripts": {
     "build": "tsc",
@@ -16,6 +16,7 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.20",
+    "@types/cors": "^2.8.14",
     "@types/node": "^20.8.9",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
