--- a/package.json
+++ b/package.json
@@ -1,23 +1,35 @@
 {
   "name": "page-scraper",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "Generic web page scraping service with browser automation",
   "main": "dist/index.js",
   "scripts": {
     "build": "tsc",
     "start": "node dist/index.js",
-    "dev": "ts-node-dev --respawn --transpile-only src/index.ts"
+    "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
+    "test": "jest --config jest.config.js",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "test:ci": "jest --coverage --watchAll=false"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "puppeteer": "^23.0.0",
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1"
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "puppeteer": "^23.0.0"
   },
   "devDependencies": {
-    "@types/express": "^4.17.20",
+    "@types/cheerio": "^0.22.35",
     "@types/cors": "^2.8.14",
+    "@types/express": "^4.17.20",
+    "@types/jest": "^29.5.6",
     "@types/node": "^20.8.9",
+    "@types/supertest": "^2.0.15",
+    "cheerio": "^1.1.2",
+    "jest": "^29.7.0",
+    "supertest": "^6.3.3",
+    "testcontainers": "^10.0.0",
+    "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.2.2"
