--- a/Dockerfile.test
+++ b/Dockerfile.test
@@ -1,9 +1,8 @@
-# Use full Node image (not Alpine) for better Puppeteer support
 FROM node:20
 
 WORKDIR /app
 
-# Install dependencies for Puppeteer
+# Install dependencies for Puppeteer (full setup for scraper testing)
 RUN apt-get update && apt-get install -y \
     wget \
     gnupg \
@@ -28,21 +27,11 @@ ENV PUPPETEER_EXECUTABLE_PATH=/usr/bin/google-chrome-stable
 RUN npm config set fetch-timeout 300000 && npm config set fetch-retry-maxtimeout 300000
 RUN timeout 600 npm install --no-audit --no-fund
 
-# Copy source code
+# Copy source code and tests
 COPY . .
 
-# Build the application
-RUN npm run build
+# Ensure test output directory exists
+RUN mkdir -p /app/test-output
 
-# Create non-root user for security
-RUN groupadd -r pptruser && useradd -r -g pptruser -G audio,video pptruser \
-    && mkdir -p /home/pptruser/Downloads \
-    && chown -R pptruser:pptruser /home/pptruser \
-    && chown -R pptruser:pptruser /app
-
-# Switch to non-root user
-USER pptruser
-
-# EXPOSE will be handled by Docker Compose port mapping
-
-CMD ["npm", "start"]
+# Default test command
+CMD ["npm", "run", "test:coverage"]
