Remove compiled JavaScript files and update .gitignore
- Remove compiled JS and source map files from version control
- Add .gitignore patterns for compiled TypeScript outputs
- Keep configuration JS files like jest.config.js and test-summary.js

Compiled files should be generated during build/deployment,
not tracked in version control.

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,16 @@ node_modules/
 
 # Build outputs
 /dist
+# Compiled TypeScript files
+index.js
+index.js.map
+routes/*.js
+routes/*.js.map
+services/*.js
+services/*.js.map
+# Keep configuration JS files
+!jest.config.js
+!test-summary.js
 
 # Environment variables
 .env
