--- a/.dockerignore
+++ b/.dockerignore
@@ -1,13 +1,36 @@
 node_modules
 npm-debug.log
+dist
 .git
-.gitignore
-README.md
 .env
-.nyc_output
+.env.local
+.env.*.local
 coverage
-.coverage
-*.log
+.nyc_output
 .DS_Store
+*.log
+.vscode
+.idea
 *.swp
 *.swo
+*~
+.github
+.gitignore
+README.md
+docker-compose*.yml
+Dockerfile*
+.dockerignore
+tests
+test
+__tests__
+*.test.js
+*.test.ts
+*.spec.js
+*.spec.ts
+.eslintrc*
+.prettierrc*
+jest.config*
+tsconfig.test.json
+screenshots
+downloads
+tmp
