--- a/.dockerignore
+++ b/.dockerignore
@@ -5,6 +5,9 @@ dist
 .env
 .env.local
 .env.*.local
+.env.*
+*.env
+.env*
 coverage
 .nyc_output
 .DS_Store
@@ -34,3 +37,29 @@ tsconfig.test.json
 screenshots
 downloads
 tmp
+# Security - exclude any potentially sensitive files
+*.pem
+*.key
+*.cert
+*.crt
+*.p12
+*.pfx
+.npmrc
+.yarnrc
+secrets
+secrets.*
+*.secret
+*.secrets
+config/local*
+config/development*
+*.local.js
+*.local.ts
+# Exclude any credentials or tokens
+*credentials*
+*token*
+*apikey*
+*api_key*
+*auth*
+# Exclude build artifacts that aren't needed
+*.map
+*.tsbuildinfo
