Address additional Qodo review feedback
- Use explicit chromium-browser path for Alpine Linux
- Fix healthcheck to avoid shell substitution with backticks
- Add try-finally block for test environment cleanup
- Remove Dockerfile* from .dockerignore (breaks builds)
- Add writable home directory for non-root pptruser
- Set HOME environment variable for Chromium profile/cache

--- a/Dockerfile.production
+++ b/Dockerfile.production
@@ -57,12 +57,15 @@ RUN apk add --no-cache \
     ttf-freefont \
     dumb-init && \
     addgroup -g 1001 -S pptruser && \
-    adduser -S pptruser -u 1001
+    adduser -S -u 1001 -G pptruser -h /home/pptruser pptruser && \
+    mkdir -p /home/pptruser && \
+    chown -R pptruser:pptruser /home/pptruser
 
 # Set Puppeteer environment variables (Alpine Chromium path)
 ENV PUPPETEER_SKIP_CHROMIUM_DOWNLOAD=true \
-    PUPPETEER_EXECUTABLE_PATH=/usr/bin/chromium \
-    NODE_ENV=production
+    PUPPETEER_EXECUTABLE_PATH=/usr/bin/chromium-browser \
+    NODE_ENV=production \
+    HOME=/home/pptruser
 
 WORKDIR /app
 
@@ -95,7 +98,7 @@ EXPOSE 3000
 
 # Health check that respects PORT (defaults to 3000)
 HEALTHCHECK --interval=30s --timeout=10s --start-period=30s --retries=3 \
-  CMD node -e "const http=require('http');const port=process.env.PORT||3000;http.get(\`http://localhost:\${port}/health\`,(r)=>{if(r.statusCode!==200)process.exit(1)}).on('error',()=>process.exit(1));"
+  CMD node -e "const http=require('http');const port=process.env.PORT||3000;http.get('http://localhost:'+port+'/health',(r)=>{if(r.statusCode!==200)process.exit(1)}).on('error',()=>process.exit(1));"
 
 # Use dumb-init to handle signals
 ENTRYPOINT ["dumb-init", "--"]
