--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,18 @@ src/__tests__/__mocks__/browserPool.ts
 # Exclude only personal Claude preferences
 .claude/personal/
 .claude/user-*/
+
+# Claude-specific files
+.claude/
+CLAUDE.md
+*claude-backup*
+
+# Test outputs and reports  
+TESTING.md
+test-summary.js
+*_TEST*.md
+
+# Backup files
+*.backup
+*.bak
+*~
