--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,23 +21,14 @@ jobs:
           node-version: '20'
           cache: 'npm'
 
-      - name: Install Chrome dependencies for Puppeteer
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y \
-            libnss3 \
-            libatk-bridge2.0-0 \
-            libdrm2 \
-            libxkbcommon0 \
-            libxcomposite1 \
-            libxdamage1 \
-            libxfixes3 \
-            libxrandr2 \
-            libgbm1 \
-            libasound2t64
-
       - name: Install dependencies
         run: npm ci
+
+      - name: Install Chromium for Puppeteer
+        run: |
+          npx puppeteer browsers install chrome
+          # Set environment variable for tests
+          echo "PUPPETEER_EXECUTABLE_PATH=$(npx puppeteer browsers path chrome)" >> $GITHUB_ENV
       
       - name: Run linter
         run: npm run lint || true
