--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -6,7 +6,7 @@ sonar.projectName=Figure Collector Page Scraper
 
 sonar.sources=src
 sonar.exclusions=**/node_modules/**,**/dist/**,**/*.test.ts,**/*.spec.ts
-sonar.coverage.exclusions=src/index.ts,src/utils/logger.ts
+sonar.coverage.exclusions=src/index.ts,src/utils/logger.ts,src/__tests__/**
 sonar.tests=src
 sonar.test.inclusions=**/*.test.ts,**/*.spec.ts
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
